--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.padding20 {
+  padding-bottom: 20px;
+}
+
+.marginBot20 {
+  margin-bottom: 20px;
+}
